Dodana jedna wizualizacja.